@@ -397,6 +397,9 @@ Franck Joncourt
     - Submitted patch to correct mail binary usage to redirect stderr.
     - Submitted patch to close stdout, stderr, and stdin when running as a
       daemon.
+    - Added --Override-config feature so that alternate configuration files
+      can be specified on the command line to override configuration variables
+      in the standard /etc/psad/psad.conf file.
 
 Erik Heidt
     - Submitted patch to fix fwsnort sid reporting w.r.t. ending newline
