@@ -1,4 +1,7 @@
 psad-2.1.6 (04//2009):
+    - (Franck Joncourt) Added --Override-config feature so that alternate
+      configuration files can be specified on the command line to override
+      configuration variables in the standard /etc/psad/psad.conf file.
     - (Franck Joncourt) Submitted patches to fix stderr redirection for the
       usage of the mail binary, and to close stdout, stdin, and stderr when
       running psad as a daemon.
